--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -35,6 +35,7 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 16px;
+            min-width: 85px;
         }
         button:hover {
            #verde  background-color: #218838;
