--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -2,13 +2,20 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Risultato</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/main.css">
 </head>
 <body>
-<div th:class="'container ' + ${messageClass}">
-    <h1>Risultato</h1>
-    <p th:text="${message}"></p>
-    <a href="/game"><button>Prossima Domanda</button></a>
+<div class="container">
+    <div class="row">
+        <div class="col-md-8">
+            <div th:class="'center-block text-center ' + ${messageClass}">
+                <h1>Risultato</h1>
+                <p th:text="${message}"></p>
+                <a href="/game"><button>Prossima Domanda</button></a>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
