--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-  <title>Gioco di Matematica</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="/main.css">
-</head>
+<head th:replace="/partial/head"></head>
 <body>
-<div class="container-md text-center border">
+<div th:replace="/partial/nav"></div>
+<div class="container-md text-center border" style="margin-top: 90px;">
   <div class="row">
     <div class="col-md-12">
       <h1>Oops. Qualcosa è andato storto</h1>
@@ -15,7 +12,7 @@
     </div>
   </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+<div th:replace="/partial/footer"></div>
+<div th:replace="/partial/script"></div>
 </body>
 </html>
