--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,7 +6,7 @@
 <div class="container" style="margin-top: 90px;">
     <div class="row">
         <div class="col-md-4"></div>
-        <form th:action="@{/register}" method="post" class="card col-md-3">
+        <form th:action="@{/register}" method="post" class="card col-md-4">
             <div class="card-body">
                 <h5 class="card-title mb-4">Please register</h5>
                 <!-- Email input -->
@@ -22,8 +22,15 @@
                 <!-- Submit button -->
                 <button type="submit" class="btn btn-primary form-control mb-4">Sign on</button>
                 <!-- Register buttons -->
+                <div>
+                    Already have an account?&nbsp;
+                    <button href="/login" type="button" class="btn btn-link">
+                        Login
+                    </button>
+                </div>
             </div>
         </form>
+
         <div class="col-md-4"></div>
     </div>
 </div>
