--- a/src/main/resources/templates/mail_activate_account.html
+++ b/src/main/resources/templates/mail_activate_account.html
@@ -18,15 +18,14 @@
             background-color: #fff;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            text-align: center;
         }
         .activation-code {
             font-size: 36px;
-            text-align: center;
             margin-bottom: 20px;
         }
         .activation-link {
             display: block;
-            text-align: center;
             margin-top: 20px;
         }
         .activation-link a {
@@ -42,8 +41,9 @@
 <body>
 <div class="container">
     <h1>Account Activation</h1>
-    <p class="greeting" th:text="'Hello ' + ${username} + ','"></p>
-    <p>Thank you for signing up! Please use the following activation code to activate your account:</p>
+    <em><p class="greeting" th:text="'Hello ' + ${username} + ','"></p></em>
+    <p><em>Thank you for signing up!</em></p>
+    <p>Please use the following activation code to activate your account:</p>
     <div class="activation-code"><span th:text="${activation_code}"></span></div>
     <div class="activation-link">
         <a th:href="${confirmationUrl}" target="_blank">Activate your account</a>
